# dio-sistema-bancario

./: README.md  desafio.py  desafio_atualizado.py  pyproject.toml
01_desafio_basico/: desafio.py
02_desafio_intermediario/: desafio.py
03_desafio_poo/: config.yaml  main.py  model.py
04_desafio_decoradores_iteradores_geradores/: main.py
04_desafio_decoradores_iteradores_geradores/filtro/: conta.py
04_desafio_decoradores_iteradores_geradores/menu_sistema/: cliente.py  extrato.py
04_desafio_decoradores_iteradores_geradores/modelos/: model.py  util.py
05_desafio_datas/: main.py
05_desafio_datas/config/: __init__.py
05_desafio_datas/filtro/: cliente.py
05_desafio_datas/menu_sistema/: conta.py  extrato.py  principal.py  transacao.py
05_desafio_datas/modelos/: model.py
06_desafio_arquivos/: main.py
06_desafio_arquivos/arquivos/: __init__.py  log.txt
06_desafio_arquivos/config/: __init__.py
06_desafio_arquivos/filtro/: conta.py
06_desafio_arquivos/menu_sistema/: cliente.py  conta.py  extrato.py  principal.py  transacao.py
06_desafio_arquivos/modelos/: model.py  util.py
