[tool.poetry]
name = "dio-sistema-bancario"
version = "0.1.0"
description = ""
authors = ["Tiago Tardelli <tiagob.tardelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
